# fast-stream-poc

./: .faststream_poc.db  .gitignore  compose.yaml  faststream_poc.db  pyproject.toml
faststream_poc/: main.py
faststream_poc/api/: health.py
faststream_poc/database/: engine.py  models.py
faststream_poc/outbox/: worker.py
faststream_poc/rabbit/: app.py  base_router.py  broker.py  exchanges.py  message.py
faststream_poc/rabbit/consumers/: health.py
faststream_poc/settings/: __init__.py
