[tool.poetry]
name = "faststream-poc"
version = "0.1.0"
description = ""
authors = ["Gustavo Santos <asantos.gustavo@luizalabs.com>"]
include = ["faststream_poc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
faststream = { extras = ["rabbit"], version = "^0.3.0" }
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
aiosqlite = "^0.19.0"
ulid = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
